[gd_scene load_steps=36 format=2]

[ext_resource path="res://assets/sprites/background_day.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/instructions.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/flappyfont.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sprites/how_to_play.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/label_flappy_bird.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/button_play_normal.png" type="Texture" id=6]
[ext_resource path="res://assets/scripts/GameMenu.gd" type="Script" id=7]
[ext_resource path="res://assets/sprites/button_play_pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/param_button.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/quit_button.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/background_night.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/bird_blue_0.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/bird_blue_1.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/bird_blue_2.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/bird_red_0.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/bird_red_1.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/bird_orange_1.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/bird_red_2.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/bird_orange_2.png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/bird_orange_0.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/button_ok.png" type="Texture" id=21]
[ext_resource path="res://assets/sprites/arrow_button_left.png" type="Texture" id=22]
[ext_resource path="res://assets/sprites/arrow_button_right.png" type="Texture" id=23]
[ext_resource path="res://assets/sprites/day_button.png" type="Texture" id=24]
[ext_resource path="res://assets/sprites/night_button.png" type="Texture" id=25]
[ext_resource path="res://assets/audio/MainMenuMusic.ogg" type="AudioStream" id=26]
[ext_resource path="res://assets/sprites/button_credits.png" type="Texture" id=27]

[sub_resource type="Animation" id=1]
resource_name = "BackgroundScrolling"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 216, 256 ), Vector2( 27, 256 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "BackgroundScrolling"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 216, 256 ), Vector2( 27, 256 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_color = Color( 0.984314, 0.984314, 0.984314, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 35
use_mipmaps = true
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "blue",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 18 ) ],
"loop": true,
"name": "red",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 17 ), ExtResource( 19 ) ],
"loop": true,
"name": "yellow",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=7]
size = 55
use_mipmaps = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 25
use_mipmaps = true
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 216, 256 )
scale = Vector2( 3, 2 )
texture = ExtResource( 1 )

[node name="DayScrolling" type="AnimationPlayer" parent="."]
root_node = NodePath("../Background")
autoplay = "BackgroundScrolling"
playback_speed = 0.3
method_call_mode = 1
anims/BackgroundScrolling = SubResource( 1 )

[node name="Background2" type="Sprite" parent="."]
visible = false
position = Vector2( 216, 256 )
scale = Vector2( 3, 2 )
texture = ExtResource( 11 )

[node name="NightScrolling" type="AnimationPlayer" parent="."]
root_node = NodePath("../Background2")
autoplay = "BackgroundScrolling"
playback_speed = 0.3
method_call_mode = 1
anims/BackgroundScrolling = SubResource( 2 )

[node name="MainMenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="MainMenu"]
margin_left = 26.0
margin_top = 17.0
margin_right = 222.0
margin_bottom = 95.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="TextureButton" parent="MainMenu"]
margin_left = 151.0
margin_top = 310.0
margin_right = 164.0
margin_bottom = 324.0
rect_scale = Vector2( 1.85, 1.85 )
texture_normal = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTP_Button" type="TextureButton" parent="MainMenu"]
margin_left = 74.0
margin_top = 310.0
margin_right = 118.0
margin_bottom = 327.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="TextureButton" parent="MainMenu"]
margin_left = 44.0
margin_top = 208.0
margin_right = 116.0
margin_bottom = 250.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParamButon" type="TextureButton" parent="MainMenu"]
margin_left = 31.0
margin_top = 305.0
margin_right = 61.0
margin_bottom = 335.0
rect_scale = Vector2( 1.2, 1.2 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="MainMenu"]
margin_left = 185.0
margin_top = 310.0
margin_right = 198.0
margin_bottom = 324.0
rect_scale = Vector2( 1.85, 1.85 )
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Studio" type="Label" parent="MainMenu"]
margin_left = 112.0
margin_top = 487.0
margin_right = 246.0
margin_bottom = 514.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
text = "Studio du manque d'envie
                 Release v1.0"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DeluxeLabel" type="Label" parent="MainMenu"]
margin_left = 144.0
margin_top = 87.0
margin_right = 254.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.984314, 0.984314, 0.984314, 1 )
custom_colors/font_outline_modulate = Color( 0.376471, 0.27451, 0.329412, 1 )
custom_colors/font_color_shadow = Color( 0.376471, 0.27451, 0.329412, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_as_outline = 4
text = "Deluxe"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HowToPlay" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OrLabel" type="Label" parent="HowToPlay"]
margin_left = 77.3326
margin_top = 372.342
margin_right = 174.333
margin_bottom = 411.342
custom_fonts/font = SubResource( 5 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
text = "Or"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HowToPlay"]
margin_left = 54.3326
margin_top = 420.351
margin_right = 193.333
margin_bottom = 477.351
color = Color( 0.988235, 0.172549, 0.129412, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SpaceLabel" type="Label" parent="HowToPlay"]
margin_left = 47.3326
margin_top = 420.351
margin_right = 206.333
margin_bottom = 480.351
custom_fonts/font = SubResource( 5 )
text = "Space"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ParamMenu" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0431373, 0.0588235, 0.337255, 0.521569 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DayNightButton" type="TextureButton" parent="ParamMenu"]
margin_left = 151.0
margin_top = 298.0
margin_right = 164.0
margin_bottom = 312.0
rect_scale = Vector2( 1.85, 1.85 )
toggle_mode = true
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightArrowButton" type="TextureButton" parent="ParamMenu"]
margin_left = 157.0
margin_top = 141.0
margin_right = 170.0
margin_bottom = 155.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftArrowButton" type="TextureButton" parent="ParamMenu"]
margin_left = 51.0
margin_top = 141.0
margin_right = 64.0
margin_bottom = 155.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaveParamButton" type="TextureButton" parent="ParamMenu"]
margin_left = 70.0
margin_top = 297.0
margin_right = 110.0
margin_bottom = 311.0
rect_scale = Vector2( 1.85, 1.85 )
texture_normal = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseColor" type="AnimatedSprite" parent="ParamMenu"]
position = Vector2( 116, 156 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 6 )
animation = "yellow"
playing = true

[node name="BirdColorLabel" type="Label" parent="ParamMenu"]
margin_left = 46.0
margin_top = 108.0
margin_right = 231.0
margin_bottom = 141.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_as_outline = 0
text = "Bird's Color"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXLabel" type="Label" parent="ParamMenu"]
margin_left = 10.0
margin_top = 198.0
margin_right = 64.0
margin_bottom = 231.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_as_outline = 0
text = "SFX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="ParamMenu"]
margin_left = 9.0
margin_top = 229.0
margin_right = 63.0
margin_bottom = 262.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_as_outline = 0
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParamLabel" type="Label" parent="ParamMenu"]
margin_left = 10.0
margin_top = 23.0
margin_right = 199.0
margin_bottom = 56.0
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_as_outline = 0
text = "Parameters"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXSlider" type="HSlider" parent="ParamMenu"]
margin_left = 88.0
margin_top = 202.0
margin_right = 216.0
margin_bottom = 218.0
min_value = -20.0
max_value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="ParamMenu"]
margin_left = 89.0
margin_top = 234.0
margin_right = 217.0
margin_bottom = 250.0
min_value = -20.0
max_value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditTitle" type="Label" parent="Credits"]
margin_left = 24.0
margin_top = 25.0
margin_right = 232.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_as_outline = 0
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="Credits"]
margin_left = 11.0
margin_top = 157.0
margin_right = 239.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
text = "Musics by 
       Panda Beats"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OriginalLabel" type="Label" parent="Credits"]
margin_left = 12.0
margin_top = 249.0
margin_right = 290.0
margin_bottom = 333.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
text = "Original concept
     by 
		       Dong Nguyen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuMusic" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 122, 256 )
stream = ExtResource( 26 )
autoplay = true
[connection signal="pressed" from="MainMenu/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="MainMenu/HTP_Button" to="." method="_on_HTP_Button_pressed"]
[connection signal="pressed" from="MainMenu/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MainMenu/ParamButon" to="." method="_on_ParamButon_pressed"]
[connection signal="pressed" from="MainMenu/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="ParamMenu/DayNightButton" to="." method="_on_DayNightButton_pressed"]
[connection signal="pressed" from="ParamMenu/RightArrowButton" to="." method="_on_RightArrowButton_pressed"]
[connection signal="pressed" from="ParamMenu/LeftArrowButton" to="." method="_on_LeftArrowButton_pressed"]
[connection signal="pressed" from="ParamMenu/LeaveParamButton" to="." method="_on_LeaveParamButton_pressed"]
[connection signal="value_changed" from="ParamMenu/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="value_changed" from="ParamMenu/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
